--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: "Ubuntu", sans-serif;
 }
 a {
     text-decoration: none;
@@ -11,7 +11,7 @@ a {
 body {
     background-color: #e4efe7;
 }
-.banner-div{
+.banner-div {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,46 +20,72 @@ body {
 header {
     background-color: #065520;
     padding-bottom: 10px;
-    color: #FFF;
+    color: #fff;
 }
 .banner-img {
     width: 100px;
     margin: 0 15px;
 }
-.nav-bar {
-    display: flex;
-    justify-content: space-around;
-}
-.nav-bar div {
-    margin: 0 10px;
-    font-weight: bold;
-    font-size: 20px;
-    padding: 15px;
-    transition: all .3s;
-    border-radius: 10px;
-}
-.nav-bar div p {
-    cursor: pointer;
-}
-.nav-bar div:hover{
-    background-color: #00000066;
-}
 .main-container {
     padding: 40px;
     width: 100%;
 }
-.main-content{
+.main-section {
     display: flex;
+    padding: 40px;
+    background-color: #0001;
 }
-.main-img{
+.main-img {
     background-color: #000;
     width: 300px;
     height: 300px;
-    margin: 0 10px;
+    margin-right: 10px;
 }
-.main-resume{
+.main-resume {
     color: #000;
-    margin: 0 10px;
+    margin: auto 0;
+    margin-left: 10px;
     flex-shrink: 300;
-    font-size: 30px;
+    font-size: 23px; 
+}
+.article-container {
+    background-image: url("/resources/images/menciones.png");
+    background-size: 100%;
+    background-position: center;
+    border-radius: 10px;
+    width: 260px;
+    height: 150px;
+    box-shadow: 0 0 15px #000;
+    transition: all .2s;
+}
+.article-container:hover{
+    background-size: 110%;
+}
+.article-content{
+    height: 100%;
+    /* background-image: linear-gradient(to left,#000,transparent,#000);
+    background-size: 999%;
+    background-position: center; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    transition: all .2s; 
+}
+.article-content p{
+    margin: auto 10px;
+    cursor: pointer;
+    font-size: 17px;
+    font-weight: bold;
+    color: transparent;
+}
+.article-content:hover{
+    background-color: #0006;
+    /* background-size: 130%; */
+}
+.article-content:hover p{
+    color: #fff;
+}
+.article-title{
+    text-align: center;
+    margin-bottom: 15px;
 }
