--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,6 +32,7 @@ header {
 }
 .main-section {
     display: flex;
+    justify-content: space-around;
     padding: 40px;
     background-color: #0001;
 }
@@ -39,6 +40,7 @@ header {
     background-color: #000;
     width: 300px;
     height: 300px;
+    box-shadow: 0 0 15px #000;
     margin-right: 10px;
 }
 .main-resume {
@@ -49,8 +51,7 @@ header {
     font-size: 23px; 
 }
 .article-container {
-    background-image: url("/resources/images/menciones.png");
-    background-size: 100%;
+    background-repeat: no-repeat;
     background-position: center;
     border-radius: 10px;
     width: 260px;
@@ -58,32 +59,56 @@ header {
     box-shadow: 0 0 15px #000;
     transition: all .2s;
 }
-.article-container:hover{
+.menciones .article-container{
+    background-size: 100%;
+    background-image: url("/resources/images/menciones.png");
+}
+.menciones:hover .article-container{
     background-size: 110%;
+}
+.nosotros .article-container{
+    background-size: 50%;
+    background-image: url("/resources/images/nosotros.png");
+}
+.nosotros:hover .article-container{
+    background-size: 60%;
 }
 .article-content{
     height: 100%;
-    /* background-image: linear-gradient(to left,#000,transparent,#000);
-    background-size: 999%;
-    background-position: center; */
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    align-items: center;
+    border-radius: 10px;
     transition: all .2s; 
 }
+.article-content div{
+    display: flex;
+    width: 100%;
+    justify-content: space-between; 
+}
 .article-content p{
-    margin: auto 10px;
+    margin: 0 10px;
     cursor: pointer;
+    color: #fff;
+    border-radius: 5px;
     font-size: 17px;
     font-weight: bold;
-    color: transparent;
+    padding: 5px;
+    background-color: #0005; 
+    display: none;
+}
+.article-content div{
+    display: flex;
+    justify-content: space-between;
 }
 .article-content:hover{
     background-color: #0006;
-    /* background-size: 130%; */
 }
 .article-content:hover p{
-    color: #fff;
+    display: block;
+}
+.article-content p:hover{
+    background-color: #0002;
 }
 .article-title{
     text-align: center;
