--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,21 +38,31 @@ header {
     display: flex;
     justify-content: space-around;
     padding: 40px;
-    background-color: #0001;
+    background-color: #c2cdc5;
 }
-.main-img {
-    background-color: #000;
-    width: 300px;
-    height: 300px;
-    box-shadow: 0 0 15px #000;
-    margin-right: 10px;
+.div-section:nth-child(1){
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
-.main-resume {
-    color: #000;
-    margin: auto 0;
-    margin-left: 10px;
-    flex-shrink: 300;
-    font-size: 23px; 
+.div-section:nth-child(2){
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+.main-resume{
+    width: 100%;
+    height: 400px;
+    background-image:linear-gradient(to right,transparent 30%,#c2cdc5), url("/resources/images/entrada_principal.jpg");
+    background-repeat: no-repeat;
+    background-position: -1px;
+    background-size: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+.text-resume{
+    font-size: 25px;
+    font-weight: bold;
+    width: 50%;
 }
 .article-container {
     background-repeat: no-repeat;
