--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     font-family: "Ubuntu", sans-serif;
 }
+:root {
+    --color: #067720;
+}
 a {
     text-decoration: none;
     color: #fff;
@@ -11,24 +14,36 @@ a {
 body {
     background-color: #e4efe7;
 }
-.banner-div {
+header {
+    width: 100%;
+    height: 200px;
+    background-image: url("/resources/images/banner.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    box-shadow: 0 5px 10px #000;
+}
+.banner-div{
+    height: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 30px;
+}
+.banner-title{
+    text-align: center;
+    color: #065520;
+}
+.banner-img{
+    width: 80px;
 }
 hr {
     margin: 0 auto;
-    border-color: #065520;
+    border-color: var(--color);
     width: 60%;
 }
-header {
-    background-color: #065520;
-    padding-bottom: 10px;
-    color: #fff;
-}
 footer{
-    background-color: #065520;
+    background-color: var(--color);
     padding: 30px;
     color: #ccc;
 }
@@ -48,16 +63,12 @@ footer{
     margin: 10px;
     text-align: center;
 }
-.banner-img {
-    width: 100px;
-    margin: 0 15px;
-}
 main {
     padding: 40px;
     width: 100%;
 }
 .main-section {
-    border: 5px solid #065520;
+    border: 5px solid var(--color);
     border-radius: 15px;
     background-color: #c2cdc5;
 }
