--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,7 +119,7 @@ main {
     position: absolute;
     height: 400px;
     z-index: 4;
-    background-image: linear-gradient(to right, transparent 50%, #c2cdc5);
+    background-image: linear-gradient(to right, transparent 30%, #c2cdc5);
 }
 .img-container div:nth-child(1){
     background-image: url("/resources/images/slider_principal_1.jpg");
@@ -150,7 +150,7 @@ main {
 .article-container {
     background-repeat: no-repeat;
     background-position: center;
-    margin: 20px 0;
+    margin: 20px 10px;
     border-radius: 10px;
     width: 260px;
     height: 150px;
