--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,7 +98,7 @@ li {
     list-style: none;
 }
 a {
-    color: #000;
+    color: #fff;
 }
 .nav-bar {
     width: 100%;
@@ -128,6 +128,7 @@ a {
     align-items: centeR;
 }
 .menu > ul > li > a:hover {
+    color: #000;
     background-color: #289942;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
 }
@@ -315,4 +316,61 @@ a {
     border: 5px solid var(--color);
     border-radius: 15px;
     background-color: #c2cdc5;
+}
+.content-section {
+    width: 100%;
+}
+.img-content{
+    width: 25em;
+    float: left;
+    margin: 0px 15px;
+}
+.img-content-container{
+    display: flex;
+    width: 25em;
+    justify-content: center;
+    height: 15em;
+    background-image: url("/resources/images/salon_mecanica.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0 15px;
+    align-items: flex-end;
+    border: 3px solid;
+    float: left;
+    transition: all 200ms ease;
+}
+.img-description{
+    position: absolute;
+    font-weight: bold;
+    text-align: center;
+    font-size: 1.2em;
+    color: transparent;
+    transition: all 200ms ease;
+}
+.img-content-container:hover .img-description{
+    color: #FFF;
+}
+.img-content-container:hover{
+    background-image: linear-gradient(to bottom, transparent,#000), url("/resources/images/salon_mecanica.jpg");
+}
+.img-description p {
+    text-align: center;
+    margin: 0 auto;
+    width: 50%;
+}
+.text-section,.list-section{
+    font-size: 1.5em;
+    line-height: 1.3em;
+}
+.list-section p{
+    margin: 10px 0;
+}
+p {
+    text-align: justify;
+}
+.title-section{
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 2.5em;
 }
