--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,9 @@
     --height-slider: 21em;
     --width-slider: 86vw;
     --width-gradient: 86vw;
+    --width-article: 14em;
+    --height-article: 7em;
+    --title-article: 110%;
 }
 a {
     text-decoration: none;
@@ -176,8 +179,8 @@ main {
     background-position: center;
     margin: 20px 10px;
     border-radius: 10px;
-    width: 14em;
-    height: 7em;
+    width: var(--width-article);
+    height: var(--height-article);
     box-shadow: 0 0 1em #000;
     transition: all 0.2s;
 }
@@ -253,16 +256,19 @@ main {
     background-color: #0002;
 }
 .article-title {
-    font-size: var(--title);
+    font-size: var(--title-article);
     text-align: center;
     margin-bottom: 15%;
 }
 @media screen and (max-width: 600px) {
     :root {
         --title: 90%;
+        --title-article: 170%;
         --width-slider: 80vw;
         --height-slider: 10em;
         --width-gradient: 80vw;
+        --width-article: 70vw;
+        --height-article: 7em;
     }
     .div-section:nth-child(1) {
         width: fit-content;
@@ -277,7 +283,7 @@ main {
         border-radius: 12px;
     }
     .article-container div p {
-        font-size: 45%;
+        font-size: 55%;
         background-color: #000a;
         padding: 3%;
         display: block;
@@ -306,9 +312,7 @@ main {
         border-radius: 0;
     }
     .article-container {
-        width: 10em;
         border-radius: 0;
-        height: 5em;
         box-shadow: 0 0 .5em #000;
     }
     .background-gradient {
