--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,14 +24,14 @@ body {
 header {
     width: 100%;
     height: 20%;
-    padding: 2%;
+    box-shadow: 0 0 15px #000;
+}
+.banner-div {
     background-image: url("/resources/images/banner.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    box-shadow: 0 0 15px #000;
-}
-.banner-div {
+    width: 100%;
     height: 100%;
     display: flex;
     padding: 20px;
@@ -77,6 +77,7 @@ footer {
 main {
     padding: 3%;
     display: flex;
+    justify-content: center;
     width: 100%;
     margin-top: 10px;
 }
@@ -94,6 +95,9 @@ main {
     justify-content: center;
     padding: 3%;
     width: 100%;
+}
+.div-section.index{
+    width: 100vw;
 }
 .div-section:nth-child(1) {
     align-items: center;
@@ -224,7 +228,7 @@ a {
     position: absolute;
     height: var(--height-slider);
     z-index: 4;
-    background-image: linear-gradient(to right, transparent 20%, #c2cdc5);
+    background-image: linear-gradient(to right, transparent 15%, #c2cdc5);
 }
 .img-container div:nth-child(1) {
     background-image: url("/resources/images/slider_principal_1.jpg");
@@ -309,7 +313,7 @@ a {
     display: flex;
     width: 100%;
 }
-.article-content div p {
+.article-content div a {
     margin: 0 10px;
     cursor: pointer;
     color: #fff;
@@ -327,7 +331,7 @@ a {
 .article-content:hover {
     background-color: #0006;
 }
-.article-content:hover p {
+.article-content:hover a {
     display: block;
 }
 .article-content p:hover {
@@ -342,11 +346,11 @@ a {
     :root {
         --title: 90%;
         --title-article: 170%;
-        --width-slider: 80vw;
-        --height-slider: 10em;
-        --width-gradient: 80vw;
-        --width-article: 70vw;
-        --height-article: 7em;
+        --width-slider: 90vw;
+        --height-slider: 20em;
+        --width-gradient: 90vw;
+        --width-article: 90vw;
+        --height-article: 11em; 
     }
     .div-section:nth-child(1) {
         width: fit-content;
@@ -360,7 +364,7 @@ a {
     .background-gradient {
         border-radius: 12px;
     }
-    .article-container div p {
+    .article-container div a {
         font-size: 55%;
         background-color: #000a;
         padding: 3%;
@@ -400,7 +404,7 @@ a {
         width: 80%;
     }
     .text-resume p {
-        font-size: 60%;
+        font-size: 90%;
     }
     main {
         padding: 0;
