--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,11 +66,11 @@ footer {
 .footer-direction {
     width: 25%;
     margin: 10px;
-    font-size: .7em;
+    font-size: .9em;
 }
 .footer-contacs {
     margin: 10px;
-    font-size: .7em;
+    font-size: .9em;
 }
 .footer-title {
     margin: 10px;
@@ -96,6 +96,7 @@ main {
     display: flex;
     justify-content: center;
     padding: 3%;
+    box-shadow: 0px 0px .8em #000;
     width: 100%;
 }
 .div-section:nth-child(1) {
@@ -345,7 +346,7 @@ a {
     margin-bottom: 15%;
 }
 .menu-icon{
-    width: 70%;
+    width: 60%;
     height: 100%;
     cursor: pointer;
     display: none;
@@ -391,9 +392,9 @@ p {
     float: left;
     border-radius: 7%;
 }
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 700px) {
     :root {
-        --title: 90%;
+        --title: 110%;
         --title-article: 170%;
         --width-slider: 90vw;
         --height-slider: 20em;
@@ -405,8 +406,7 @@ p {
         width: fit-content;
         border: 3px solid var(--color);
         padding: 0;
-        margin: 10px 0;
-        box-shadow: 0 0 .3em #000;
+        box-shadow: 0 0 .8em #000;
         border-radius: 15px;
     }
     .slider-container,
@@ -463,7 +463,9 @@ p {
         display: flex;
         flex-direction: column;
         align-items: center;
-        border-radius: 0;
+        border-radius: 15px;
+        margin: 0 15px; 
+        margin-bottom: 15px; 
     }
     .main-section.side{
         width: 100vw;
@@ -471,17 +473,12 @@ p {
     .side-bar{
         display: none;
     }
-    .div-section{
-        padding: 0;
-        padding-top: 3%;
-        padding-bottom: 3%;
-    }
     .footer-direction p,
     .footer-contacs p {
-        font-size: 0.5em;
+        font-size: 1.3em;
     }
     .footer-title {
-        font-size: 0.7em;
+        font-size: 1.3em; 
     }
     .menu > ul{
         flex-direction: column;
@@ -512,6 +509,14 @@ p {
         height: 300px;
         opacity: 1;
         visibility: visible;
+    }
+    .img-content{
+        float: none;
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    .content-section{
+        padding: 5%;
     }
 }
 /* **** */
