"Descripción de imágenes".
Se agregó la descripción de la imágen de la historia del Liceo.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -399,11 +399,15 @@ p {
     margin-bottom: 30px;
     font-size: var(--title);
 }
-.img-content {
+.img-content{
+    width: 100%;
+    border-radius: 7%; 
+}
+.content-section div{
     width: 50%;
-    margin-right: 3%;
+    margin-right: 1.5em;
     float: left;
-    border-radius: 7%;
+    margin-bottom: 1.5em;
 }
 @media screen and (max-width: 700px) {
     :root {
@@ -545,10 +549,10 @@ p {
         opacity: 1;
         visibility: visible;
     }
-    .img-content {
+    .content-section div{
         float: none;
         width: 100%;
-        margin-bottom: 10px;
+        margin-bottom: 50px;
     }
     .content-section {
         padding: 5%;
