--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,9 +92,6 @@ main {
     width: var(--width-slider);
     overflow: hidden;
 }
-li {
-    list-style: none;
-}
 a {
     color: #fff;
 }
@@ -116,6 +113,7 @@ a {
 .menu > ul > li {
     height: 100%;
     position: relative;
+    list-style: none;
 }
 .menu > ul > li > a {
     font-size: 0.9em;
@@ -146,6 +144,9 @@ a {
     z-index: 10;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
     transition: all 300ms ease;
+}
+.menu ul li ul li{
+    list-style: none;
 }
 .menu ul li:hover ul {
     visibility: visible;
